syntax = "proto3";

option java_multiple_files = true;
option java_package = "pl.edu.pw";
option java_outer_classname = "HelloWorldProto";

package pl.edu.pw;


message MatrixRow {
  repeated double values = 1; // Single row of a matrix
}

message Vector {
  repeated double values = 1;
}

message StreamMultiplyRequest {
  oneof multiplyRequest{
    MatrixRow row = 1;
    Vector vector = 2;
    int32 rowSize = 3;
  }
}

message StreamMultiplyResponse {
  repeated double results = 1; // Results for all rows processed
}

message ScalarMultiplyRequest {
  Vector vector = 1;
  double scalar = 2;
}

message ScalarMultiplyResponse {
  Vector result = 1;
}

message VectorOpRequest {
  Vector vector1 = 1;
  Vector vector2 = 2;
}

message VectorOpResponse {
  Vector result = 1;
}

message DotProductRequest {
  Vector vector1 = 1;
  Vector vector2 = 2;
}

message DotProductResponse {
  double result = 1;
}

message TransposeRequest {
  repeated MatrixRow matrix = 1; // The matrix to transpose
}

message TransposeResponse {
  repeated MatrixRow transposedMatrix = 1; // The transposed matrix
}

service MatrixService {
  rpc MultiplyMatrixVector(stream StreamMultiplyRequest) returns ( StreamMultiplyResponse);

  rpc MultiplyVectorScalar(ScalarMultiplyRequest) returns (ScalarMultiplyResponse);

  rpc AddVectors(VectorOpRequest) returns (VectorOpResponse);
  rpc SubVectors(VectorOpRequest) returns (VectorOpResponse);
  rpc transpose(TransposeRequest) returns (TransposeResponse);
}
